--- a/ts-server/package.json
+++ b/ts-server/package.json
@@ -7,6 +7,7 @@
     "tsc": "tsc",
     "dev": "ts-node-dev src/app.ts",
     "start": "node build/app.js",
+    "lint": "ts-standard",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,9 +17,16 @@
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
     "ts-node-dev": "^2.0.0",
+    "ts-standard": "^12.0.2",
     "typescript": "^4.9.4"
   },
   "dependencies": {
     "express": "4.18.2"
+  },
+  "eslintConfig": {
+    "parserOptions": {
+      "project": "./tsconfig.json"
+    },
+    "extends": ["./node_modules/ts-standard/eslintrc.json"]
   }
 }
