--- a/ts-server/package.json
+++ b/ts-server/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "tsc": "tsc",
-    "dev": "ts-node-dev src/app.ts",
-    "start": "node build/app.js",
+    "tsc": "rimraf ./build && tsc",
+    "dev": "ts-node-dev src/app.ts --ignore-watch ./data/diaries.json",
+    "start": "npm run tsc && node build/src/app.js",
     "lint": "ts-standard",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,17 +16,21 @@
   "devDependencies": {
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
+    "rimraf": "^4.1.2",
     "ts-node-dev": "^2.0.0",
     "ts-standard": "^12.0.2",
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "express": "4.18.2"
+    "express": "4.18.2",
+    "jsonfile": "^6.1.0"
   },
   "eslintConfig": {
     "parserOptions": {
       "project": "./tsconfig.json"
     },
-    "extends": ["./node_modules/ts-standard/eslintrc.json"]
+    "extends": [
+      "./node_modules/ts-standard/eslintrc.json"
+    ]
   }
 }
